--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EJEMPLOS GIT</title>
+    <link rel="stylesheet" href="css/misestilos.css">
 </head>
 <body>
     <h1>¡Hola mundo!</h1>
+    <p>Texto añadido junto con la vinculación de los estilos</p>
 </body>
 </html>
