--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -9,5 +9,6 @@
 <body>
     <h1>¡Hola mundo!</h1>
     <p>Texto añadido junto con la vinculación de los estilos</p>
+<h3>Esto es una prueba desde github</h3> 
 </body>
 </html>
